--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.example.geomesa</groupId>
     <artifactId>geomesa-tutorials</artifactId>
-    <version>1.3.0.0-m3-SNAPSHOT</version>
+    <version>1.3.0</version>
 
     <name>GeoMesa Tutorials and Examples</name>
     <packaging>pom</packaging>
@@ -30,7 +30,7 @@
     </modules>
 
     <properties>
-        <geomesa.version>1.3.0-m3-SNAPSHOT</geomesa.version>
+        <geomesa.version>1.3.0</geomesa.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -38,7 +38,7 @@
         <scala.abi.version>2.11</scala.abi.version>
 
         <!-- environment specific variables-->
-        <accumulo.version>1.7.2</accumulo.version>
+        <accumulo.version>1.8.0</accumulo.version>
         <zookeeper.version>3.4.5</zookeeper.version>
         <hadoop.version>2.5.2</hadoop.version>
         <hbase.hadoop.version>2.5.2</hbase.hadoop.version>
