--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.example.geomesa</groupId>
     <artifactId>geomesa-tutorials</artifactId>
-    <version>1.3.1.0-SNAPSHOT</version>
+    <version>1.3.2.0-SNAPSHOT</version>
 
     <name>GeoMesa Tutorials and Examples</name>
     <packaging>pom</packaging>
@@ -31,7 +31,7 @@
     </modules>
 
     <properties>
-        <geomesa.version>1.3.1</geomesa.version>
+        <geomesa.version>1.3.2-SNAPSHOT</geomesa.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
